@@ -1,6 +1,9 @@
 Revision history for {{ $dist->name }}
 
 {{$NEXT}}
+  [Bug Fixes]
+  - Char with no size parameter should default to 1.  Note that this may be an incompatible change.
+
   [Documentation]
   - Bumped copyright year.
 
